--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     install:
         commands:
             - curl -L "https://github.com/docker/compose/releases/download/1.12.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
-            - docker-compose -version
+            - docker-compose --version
             - docker-compose pull
 
     build:
