--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,20 @@
 version: 0.2
 
+environment:
+    variables:
+        DOCKER_COMPOSE_VERSION:1.16.1
+
 phases:
     install:
         commands:
-            - curl -L https://github.com/docker/compose/releases/download/1.12.1/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+            #Install docker compose
+            - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+            - chmod +x docker-compose
+            - sudo mv docker-compose /usr/local/bin
+            - docker-compose --version
 
     build:
         commands:
-            - docker-compose --version
             - docker-compose pull
             - ant test
 
