--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,11 @@ phases:
     install:
         commands:
             - curl -L "https://github.com/docker/compose/releases/download/1.11.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+            - docker-compose --version
 
     build:
         commands:
-            - ls /usr/local/bin
-            - docker-compose --version
+            - ant test
 
 artifacts:
     type: zip
