--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,14 @@ phases:
         commands:
             - curl -L "https://github.com/docker/compose/releases/download/1.11.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
             - docker-compose --version
+            - composer --version
+            - composer global require phing/phing
 
     build:
         commands:
-            - ant test
+            - phing test
 
 artifacts:
     type: zip
     files:
-        - '.'
+        - **/*
