--- a/.ebextensions/01-files.config
+++ b/.ebextensions/01-files.config
@@ -1,3 +1,3 @@
 container_commands:
     change_permissions:
-        command: chmod -Rf 777 /var/www/html/assets
+        command: "chmod -Rf 777 /app/"
