--- a/.ebextensions/01-files.config
+++ b/.ebextensions/01-files.config
@@ -1,3 +1,8 @@
-container_commands:
-    change_permissions:
-        command: "chmod -Rf 777 /app/web/assets"
+files:
+    /opt/elasticbeanstalk/hooks/appdeploy/post/50_change_permissions
+        mode: "000777"
+        owner: root
+        group: root
+        content: |
+            #!/bin/sh
+            chmod -Rf 777 /app/web/assets
