--- a/.ebextensions/01-files.config
+++ b/.ebextensions/01-files.config
@@ -1,5 +1,5 @@
 files:
-    /opt/elasticbeanstalk/hooks/appdeploy/post/50_change_permissions
+    "/opt/elasticbeanstalk/hooks/appdeploy/post/50_change_permissions"
         mode: "000777"
         owner: root
         group: root
